Issue #95 - Update NatTable to the latest dependencies
Updated examples build, removed e4.rcp.feature, updated BREE to
JavaSE-11, corrected deprecated warnings, updated version to 2.5.0